--- a/src/components/common/Navigation.module.css
+++ b/src/components/common/Navigation.module.css
@@ -1,24 +1,11 @@
 /* --- Default (Desktop) Styles --- */
-.navItem a {
-  text-decoration: none;
-  color: var(--color-text-header);
-  font-family: "Sue Ellen Francisco";
-  font-size: 30px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-}
 
 .navList {
   display: flex;
   flex-direction: column;
   list-style: none;
 }
-
-.navList .navItem {
+.navItem {
   min-width: 150px;
   max-width: 150px;
   position: relative;
@@ -28,6 +15,20 @@
   padding: 2em;
   margin-top: 2em;
   transition: transform 0.2s linear;
+}
+
+.navItem a {
+  text-decoration: none;
+  color: var(--color-text-header);
+  font-family: "Sue Ellen Francisco";
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  line-height: 1.4;
 }
 
 .navList .navItem:nth-child(even) {
@@ -57,34 +58,31 @@
 @media (max-width: 768px) {
   .navList {
     flex-direction: row;
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* width: 100%; */
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
     height: auto;
-    padding: 0;
+    padding: 0 5px;
     margin: 0;
     position: static;
     box-sizing: border-box;
-    gap: 8px;
-
-    /* flex-wrap: wrap; */
-    overflow-x: hidden;
   }
 
-  .navList .navItem {
+  .navItem {
     margin: 0;
     transform: none !important;
     background: var(--color-secondery);
     height: 70px;
-    /* flex-basis: 0; */
-    /* flex-grow: 1; */
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 0 8px;
-    min-width: 70px;
-    max-width: 90px;
+
+    padding: 0 3px;
+    min-width: 45px;
+    max-width: 65px;
+
     box-sizing: border-box;
+    box-shadow: 2px 2px 5px rgba(33, 33, 33, 0.5);
+    /* border-radius: 3px; */
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
   }
 
   .navList .navItem:nth-child(even),
@@ -98,10 +96,8 @@
   }
 
   .navItem a {
-    font-size: 14px;
+    font-size: 16px;
     color: var(--color-text-header);
-    white-space: normal;
-    word-break: break-word;
-    text-align: center;
+    align-items: center;
   }
 }
